--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/memoize-one": "^4.1.1",
     "deep-object-diff": "^1.1.0",
-    "googleapis": "^42.0.0"
+    "googleapis": "^42.0.0",
+    "memoize-one": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
