--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
+    "netlify-lambda": "^1.5.1",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1"
   }
